--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
   --font-sora: "Sora", sans-serif;
   --color-primary: #00d991;
